[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/gui/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="VBoxContainer" parent="Menu"]
margin_left = 441.0
margin_top = 238.0
margin_right = 1401.0
margin_bottom = 842.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 80

[node name="Title" type="Label" parent="Menu/View"]
margin_right = 960.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Elemental Whisps"

[node name="EndGameMessage" type="Label" parent="Menu/View"]
margin_top = 200.0
margin_right = 960.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )

[node name="ItemList" type="VBoxContainer" parent="Menu/View"]
margin_top = 400.0
margin_right = 960.0
margin_bottom = 604.0
size_flags_horizontal = 5
size_flags_vertical = 4
custom_constants/separation = 40

[node name="StartGame" type="Button" parent="Menu/View/ItemList"]
margin_right = 960.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="EndGame" type="Button" parent="Menu/View/ItemList"]
margin_top = 122.0
margin_right = 960.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "End Game"

[connection signal="pressed" from="Menu/View/ItemList/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Menu/View/ItemList/EndGame" to="." method="_on_EndGame_pressed"]
